WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238488
Window is too small after entering and exiting video/element fullscreen
https://bugs.webkit.org/show_bug.cgi?id=238488
Summary
Window is too small after entering and exiting video/element fullscreen
Jean-Yves Avenard [:jya]
Reported
2022-03-28 22:43:06 PDT
Window is too small after entering and exiting video/element fullscreen
Attachments
Patch
(1.82 KB, patch)
2022-03-28 22:48 PDT
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2022-03-28 22:48:26 PDT
Created
attachment 455996
[details]
Patch
Jean-Yves Avenard [:jya]
Comment 2
2022-03-28 22:49:18 PDT
rdar://89363964
EWS
Comment 3
2022-03-30 00:04:47 PDT
Committed
r292097
(
249017@main
): <
https://commits.webkit.org/249017@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455996
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug