Window is too small after entering and exiting video/element fullscreen https://bugs.webkit.org/show_bug.cgi?id=238488 rdar://89363964

Reviewed by Tim Horton.

Don't change the size of the window to the size of the element.

* UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController beganEnterFullScreenWithInitialFrame:finalFrame:]):



Canonical link: https://commits.webkit.org/249017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292097 268f45cc-cd09-0410-ab3c-d52691b4dbfc